avancées modules 05 héritage et 06 abstraction

--- a/01-bases-java.Rmd
+++ b/01-bases-java.Rmd
@@ -1,3 +1,5 @@
+# (PART) JAVA {-} 
+
 # Les bases de java
 
 Cette partie comporte principalement des rappels de l'initiation à Java. Les notions sont donc peu détaillées.
