--- a/02-utilisation-classes.Rmd
+++ b/02-utilisation-classes.Rmd
@@ -1,8 +1,8 @@
+# (PART) POO {-} 
+
 # L'utilisation des classes
 
-## Définitions
-
-But : 
+Objectif : 
 
   - Regrouper des variables "qui vont bien ensemble"
   - Associer les méthodes qui manipulent ces valeurs
@@ -16,9 +16,9 @@ But :
 
 Méthologie :
 
-  - Importer la classe (\@ref(import-classe)) : `import package.souspackage.Classe;`
-  - Déclarer une variable de type objet (\@ref(declare-classe)) : `Classe varDeTypeObjet ...`
-  - Créer une instance d'objet grâce au constructeur (\@ref(instance-classe)) : `... = new Classe(liste de parametres potentiels);`
+  - on importe la classe (\@ref(import-classe)) : `import package.souspackage.Classe;`
+  - on déclare une variable de type objet (\@ref(declare-classe)) : `Classe varDeTypeObjet ...`
+  - on crée une instance d'objet grâce au constructeur (\@ref(instance-classe)) : `... = new Classe(liste de parametres potentiels);`
 
 Exemple avec une classe que l'on connait : `Scanner`
 
@@ -68,15 +68,15 @@ L'utilisation d'une classe donne accès aux méthodes définies pour cette class
 Les méthodes d'instance s'appliquent à des instances de la classe (*obviously*), ce qui signifie que **toutes** les instances peuvent les utiliser indépendamment les unes des autres.  
 Elles sont appelées en plaçant le nom de l'instance concernée avant le point : `MonInstance.nomMethodeInstance();`
 
-Les méthodes de classe s'applique à la classe en soi, ce qui signifie que toutes les instances accède de la même façon.  
+Les méthodes de classe s'applique à la classe en soi, ce qui signifie que toutes les instances y accède de la même façon. 
 Elles sont appelées en plaçant le nom de la classe concernée avant le point : `MaClasse.nomMethoClasse();`
 
 **Eléments d'instance et de classe :**
 
 Chaque instance a donc accès à : 
 
-   - ses caractéristiques propres, individuelles (*éléments d'instance*)
-   - et à des caractéristiques collectives (valables pour l'ensemble des instances) et communes (identiques pour toutes les instances).
+  - ses caractéristiques propres, individuelles (*éléments d'instance*)
+  - et à des caractéristiques collectives (valables pour l'ensemble des instances) et communes (identiques pour toutes les instances).
 
 ## Surcharge {#surcharge}
 
