--- a/11-annexes.Rmd
+++ b/11-annexes.Rmd
@@ -18,6 +18,8 @@ Différence entre un argument et un paramètre (https://www.developpement-inform
 
 Héritage : généralisation, spécialisation
 
+Type paramètre ; Type argument
+
 # Annexe C
 
 Bonnes pratiques
